Fix weird firefox bug on windows where search box in POS was truncated in the iframe
FossilOrigin-Name: a8f18b5f23e0217e9471bffa6ad0b9ab8348939d

--- a/caisse/admin/style.css
+++ b/caisse/admin/style.css
@@ -237,3 +237,23 @@
 	}
 
 }
+
+.pos-user-search {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 1em;
+}
+
+.pos-user-search input[name="q"] {
+	font-size: 1.6em;
+}
+
+.pos-user-search .search button {
+	font-size: 1.2em;
+}
+
+.pos-user-search #rename_no_user {
+	font-size: .9em;
+}
